RESOLVED FIXED 250615
[IFC] theverge.com: Article underlines don't appear and disappear when expected
https://bugs.webkit.org/show_bug.cgi?id=250615
Summary [IFC] theverge.com: Article underlines don't appear and disappear when expected
zalan
Reported 2023-01-13 19:51:14 PST
Attachments
Patch (17.93 KB, patch)
2023-01-13 20:18 PST, zalan
ews-feeder: commit-queue-
Patch (20.70 KB, patch)
2023-01-13 23:04 PST, zalan
no flags
zalan
Comment 1 2023-01-13 20:18:09 PST
zalan
Comment 2 2023-01-13 23:04:57 PST
EWS
Comment 3 2023-01-14 07:48:16 PST
Committed 258914@main (4f7c6e873736): <https://commits.webkit.org/258914@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 464497 [details].
Radar WebKit Bug Importer
Comment 4 2023-01-14 07:49:18 PST
Note You need to log in before you can comment on or make changes to this bug.