Source/WebCore/layout/integration/inline/LayoutIntegrationLineLayout.h
@@ -93,7 +93,7 @@ public:
     Vector<FloatRect> collectInlineBoxRects(const RenderInline&) const;
 
     bool isPaginated() const { return m_isPaginatedContent; }
-    LayoutUnit contentLogicalHeight() const;
+    LayoutUnit contentBoxLogicalHeight() const;
     size_t lineCount() const;
     bool hasVisualOverflow() const;
     LayoutUnit firstLinePhysicalBaseline() const;
